--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         <activity android:name=".HospitaListActivity" />
         <activity android:name=".DescricaoHospitalActivity" />
         <activity android:name=".ListaUsuarioActivity" />
+        <activity android:name=".AlterarERemoverUsuarioActivity" />
+        <activity android:name=".CartaoVacinaActivity" />
+        <activity android:name=".AdicionarVacinasActivity" />
+        <activity android:name=".Main2Activity"></activity>
     </application>
 
 </manifest>
