adição de nova tabela e novas funcionalidades

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,5 +28,6 @@
         <activity android:name=".AdicionarVacinasActivity" />
 
     </application>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
 </manifest>
